tests/specs/ecosystem/bureaudouble_forks/react_remove_scroll/0_0_1.test
bureaudouble-forks/react-remove-scroll/0.0.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  ref?: Ref<HTMLElement>;
            ~~~~~~~~~~~
    at file://<tmpdir>/src/types.tsx:24:13

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
   */ shards?: Array<React.RefObject<any> | HTMLElement>;
                                            ~~~~~~~~~~~
    at file://<tmpdir>/src/types.tsx:49:45

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
type RefForwarded<T> = ForwardRefExoticComponent<T & RefAttributes<HTMLElement>> & WithClassNames;
                                                                   ~~~~~~~~~~~
    at file://<tmpdir>/src/types.tsx:69:68

Found 3 errors.

